--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -45,6 +45,9 @@
               ></app-transaction-table>
               <p *ngIf="!dataSource" class="text-center">{{ 'no_transactions_yet' | i18n }}</p>
             </div>
+            <a *ngIf="dataSource && dataSource.data.length"
+               class="p-16" fxLayoutAlign="end"
+               [routerLink]="'/transactions'">All Transactions</a>
           </div>
         </div>
         <div class="widget" fxFlex="100" fxFlex.gt-sm="40">
