--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
@@ -1,8 +1,33 @@
 mat-form-field {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
 form {
-    margin:20px 0;
+  margin: 20px 0;
+}
+
+.send-button-wrapper {
+  position: relative;
+
+  .send-button {
+    position: absolute;
+    right: 16px;
+    bottom: 21px;
+
+    &:disabled {
+      opacity: 0.2;
+    }
+
+    mat-icon {
+      &.enabled {
+        color: #039be5;
+      }
+    }
+
+    mat-spinner {
+      top: 1px;
+      left: 10px;
+    }
+  }
 }
