--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
@@ -16,3 +16,28 @@ form {
     font-size:14px;
     display: inline-block;
 }
+
+.send-button-wrapper {
+  position: relative;
+
+  .send-button {
+    position: absolute;
+    right: 16px;
+    bottom: 21px;
+
+    &:disabled {
+      opacity: 0.2;
+    }
+
+    mat-icon {
+      &.enabled {
+        color: #039be5;
+      }
+    }
+
+    mat-spinner {
+      top: 1px;
+      left: 10px;
+    }
+  }
+}
