Hidden not yet supported elements

--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -35,6 +35,8 @@
       <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
     </mat-form-field>
 
+<!--    FUTURE FEATURE-->
+<!--
     <mat-form-field appearance="outline">
       <input matInput [(ngModel)]="fullHash" name="fullHash"
              placeholder="{{ 'referenced_transaction_full_hash' | i18n }}" disabled>
@@ -50,6 +52,7 @@
         <textarea matInput [(ngModel)]="note_text" name="note_text" placeholder="{{ 'note' | i18n }}"></textarea>
       </mat-form-field>
     </div>
+-->
   </div>
 
   <div class="send-button-wrapper">
