--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -1,8 +1,8 @@
 <form (ngSubmit)="onSubmit($event);" #sendBurstForm="ngForm">
   <mat-form-field appearance="outline">
     <input matInput prefix="BURST-" burstInputValidator [patterns]="burstAddressPatternRef" mask="____-____-____-_____"
-      [dropSpecialCharacters]="false" [showMaskTyped]="true" [(ngModel)]="recipientAddress" name="recipientAddress"
-      placeholder="{{ 'recipient' | i18n }}">
+           [dropSpecialCharacters]="false" [showMaskTyped]="true" [(ngModel)]="recipientAddress" name="recipientAddress"
+           placeholder="{{ 'recipient' | i18n }}">
   </mat-form-field>
 
   <mat-grid-list cols="2" rowHeight="85px" gutterSize="10px">
@@ -20,10 +20,6 @@
 
   <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
 
-  <mat-form-field class="pin" appearance="outline">
-    <input matInput [(ngModel)]="pin" name="pin" type="password" placeholder="Your PIN">
-  </mat-form-field>
-
   <mat-checkbox (click)="showMessage=!showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
 
   <div *ngIf="showMessage">
@@ -39,13 +35,15 @@
       <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
     </mat-form-field>
 
+<!--    FUTURE FEATURE-->
+<!--
     <mat-form-field appearance="outline">
       <input matInput [(ngModel)]="fullHash" name="fullHash"
-        placeholder="{{ 'referenced_transaction_full_hash' | i18n }}" disabled>
+             placeholder="{{ 'referenced_transaction_full_hash' | i18n }}" disabled>
     </mat-form-field>
 
     <mat-checkbox [(ngModel)]="broadcast" name="broadcast" disabled>{{ "do_not_broadcast" | i18n }}</mat-checkbox>
-    <br />
+    <br/>
 
     <mat-checkbox [(ngModel)]="note" name="note" disabled>{{ "add_note_to_self_q" | i18n }}</mat-checkbox>
 
@@ -54,13 +52,30 @@
         <textarea matInput [(ngModel)]="note_text" name="note_text" placeholder="{{ 'note' | i18n }}"></textarea>
       </mat-form-field>
     </div>
-
+-->
   </div>
+
+  <div class="send-button-wrapper">
+    <mat-form-field class="message-text password-field" floatLabel="never" appearance="standard">
+      <input type="password" matInput required placeholder="Enter PIN" [(ngModel)]="pin" name="pin">
+    </mat-form-field>
+
+    <button class="send-button" mat-icon-button type="submit" aria-label="Send message"
+            [disabled]="!canSubmit()">
+      <ng-container *ngIf="!isSending">
+        <mat-icon [class.enabled]="canSubmit() || false">send</mat-icon>
+      </ng-container>
+      <ng-container *ngIf="isSending">
+        <mat-spinner diameter="20"></mat-spinner>
+      </ng-container>
+    </button>
+  </div>
+
+  <strong>Total:</strong> {{ getTotal() }} BURST -
+  <a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
+
 </form>
 
-<strong>Total:</strong> {{ getTotal() }} BURST -
-<a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
-<br /><br />
 
-<button type="submit" class="mr-8" mat-raised-button mat-button color="primary"
-  (click)="onSubmit($event)">{{ "send_burst" | i18n }}</button>
+<!--<button type="submit" class="mr-8" mat-raised-button mat-button color="primary"-->
+<!--  (click)="onSubmit($event)">{{ "send_burst" | i18n }}</button>-->
