--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -28,7 +28,10 @@
             <button mat-button [matMenuTriggerFor]="userMenu"
                     class="user-button">
                 <div fxLayout="row" fxLayoutAlign="center center">
-                    <span class="username mr-12" fxHide fxShow.gt-sm>{{selectedAccount.name || selectedAccount.accountRS}}</span>
+                    <span class="username mr-12" fxHide fxShow.gt-sm>
+                        <mat-icon *ngIf="selectedAccount.type === 'offline'">remove_red_eye</mat-icon> 
+                        {{selectedAccount.name || selectedAccount.accountRS}}
+                    </span>
                     <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
                 </div>
             </button>
