--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
@@ -16,6 +16,10 @@
     font-size: 1.2rem;
 }
 
+.mat-column-amount {
+    flex: 0 0 50px;
+}
+
 .mat-cell {
     word-wrap: normal;
     white-space: nowrap;
