fix(transactions): add transactions list to block details

--- a/web/angular-wallet/src/app/main/transactions/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -26,5 +26,10 @@
       </tr>
     </table>
   </div>
+  <div *ngSwitchCase="'Transactions'">
+      <span *ngFor="let row of value" class="transaction chip">
+        <a [routerLink]="['/transactions/transaction', row]">{{row}}</a>
+      </span>
+  </div>
   <div *ngSwitchDefault>{{value | i18n}}</div>
 </div>
