fixed #198 - mark offline/online accounts

--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.scss
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.scss
@@ -1,62 +1,77 @@
 @import "src/@fuse/scss/fuse";
 
 toolbar {
+  position: relative;
+  display: flex;
+  flex: 0 0 auto;
+  z-index: 4;
+
+  &.below {
+    z-index: 2;
+  }
+
+  .mat-toolbar {
     position: relative;
+    background: inherit !important;
+    color: inherit !important;
+  }
+
+  .logo {
     display: flex;
-    flex: 0 0 auto;
-    z-index: 4;
+    align-items: center;
 
-    &.below {
-        z-index: 2;
+    .logo-icon {
+      width: 38px;
     }
+  }
 
-    .mat-toolbar {
-        position: relative;
-        background: inherit !important;
-        color: inherit !important;
+  fuse-search-bar,
+  .user-button,
+  .language-button,
+  .chat-panel-toggle-button,
+  .quick-panel-toggle-button {
+    min-width: 64px;
+    height: 64px;
+
+    @include media-breakpoint('xs') {
+      height: 56px;
     }
+  }
 
-    .logo {
-        display: flex;
-        align-items: center;
+  .navbar-toggle-button {
+    min-width: 56px;
+    height: 56px;
+  }
 
-        .logo-icon {
-            width: 38px;
-        }
+  .toolbar-separator {
+    height: 64px;
+    width: 1px;
+
+    @include media-breakpoint('xs') {
+      height: 56px;
     }
+  }
 
-    .user-button,
-    fuse-search-bar,
-    .language-button,
-    .chat-panel-toggle-button,
-    .quick-panel-toggle-button {
-        min-width: 64px;
-        height: 64px;
+  .username mat-icon {
+    position: relative;
+    top: 6px;
+    margin-right: 8px;
+    line-height: 12px;
+  }
 
-        @include media-breakpoint('xs') {
-            height: 56px;
-        }
-    }
+}
 
-    .navbar-toggle-button {
-        min-width: 56px;
-        height: 56px;
-    }
 
-    .toolbar-separator {
-        height: 64px;
-        width: 1px;
+.mat-menu-panel {
+  max-width: fit-content !important;
+}
 
-        @include media-breakpoint('xs') {
-            height: 56px;
-        }
-    }
+.account-type-icon {
+  color: #c2c2c2 !important;
+}
 
-    .username mat-icon {
-        position: relative;
-        top:5px;
-        left:-2px;
-        color:#c2c2c2;
-        line-height: 12px;
-    }
+.mat-menu-content {
+  .manage-accounts {
+    font-weight: bold;
+  }
 }
