--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -29,7 +29,12 @@
                     class="user-button">
                 <div fxLayout="row" fxLayoutAlign="center center">
                     <span class="username mr-12" fxHide fxShow.gt-sm>
-                        <mat-icon *ngIf="selectedAccount.type === 'offline'">remove_red_eye</mat-icon> 
+                      <ng-container *ngIf="selectedAccount.type === 'offline'">
+                        <mat-icon class="account-type-icon" matTooltip="{{'hint_offline_account' | i18n}}">remove_red_eye</mat-icon>
+                      </ng-container>
+                      <ng-container *ngIf="selectedAccount.type !== 'offline'">
+                        <mat-icon class="account-type-icon" matTooltip="{{'hint_online_account' | i18n}}">verified_user</mat-icon>
+                      </ng-container>
                         {{selectedAccount.name || selectedAccount.accountRS}}
                     </span>
                     <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
@@ -39,10 +44,18 @@
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
                 <button *ngFor="let account of accounts" mat-menu-item class="" (click)="setAccount(account)">
-                    <span *ngIf="account">{{account.name || account.accountRS}}</span>
+                  <span *ngIf="account" class="username mr-12">
+                      <ng-container *ngIf="account.type === 'offline'">
+                        <mat-icon class="account-type-icon" matTooltip="{{'hint_offline_account' | i18n}}">remove_red_eye</mat-icon>
+                      </ng-container>
+                      <ng-container *ngIf="account.type !== 'offline'">
+                        <mat-icon class="account-type-icon" matTooltip="{{'hint_online_account' | i18n}}">verified_user</mat-icon>
+                      </ng-container>
+                    {{account.name || account.accountRS}}
+                    </span>
                 </button>
 
-                <button mat-menu-item class="" routerLink="/accounts">
+                <button mat-menu-item class="manage-accounts" routerLink="/accounts">
                     <mat-icon>people</mat-icon>
                     <span>Manage Accounts</span>
                 </button>
