--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -30,7 +30,7 @@
         <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type !== 'offline'">
           <span [routerLink]="['set-account-info']">{{ getAccountName() }}</span>
         </div>
-        <div class="h5 hint-text mt-8" *ngIf="selectedAccount.type === 'offline'">
+        <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type === 'offline'">
           <span>{{'hint_offline_account' | i18n}}</span>
         </div>
         <div class="avatar-container fuse-navy-700"><img class="avatar" [routerLink]="['request']" [src]="selectedAccountQRCode"></div>
@@ -41,3 +41,4 @@
     </div>
 
 </div>
+
