--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.scss
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.scss
@@ -1,16 +1,37 @@
-.pill {
-    background:#428bca;
-    color:#fff;
-    border-radius:3px;
-    padding:1px 5px;
-    line-height:1.5em;
-    font-size:12px;
+.fee-selector {
+  .__info{
+    display: flex;
+    align-items: center;
+
+    .pill {
+      background: #428bca;
+      color: #fff;
+      border-radius: 3px;
+      padding: 1px 5px;
+      line-height: 1.5em;
+      font-size: 12px;
+    }
+
+    mat-icon {
+      padding: 4px 3px;
+    }
+  }
+  .__fees{
+
+    font-size: 12px;
+    margin-bottom: 8px;
+
+    em {
+      font-style: italic;
+      color: #428bca;
+      margin-right: 4px;
+      font-size: 14px;
+    }
+
+    em:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
 }
-em {
-    font-style:italic;
-    color:#428bca;
-}
-em:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
+
